# System-Design-AB

./: README.md
03_acid/: docker-compose.yml
04_bloom_filter/: go.mod  go.sum  main.go
05_consistent-hashing/: .ait.toml  .gitignore  docker-compose.yml  main.go
06_rabbitmq/: .gitignore  docker-compose.yml  main.go
07_postgresql/: .air.toml  .gitignore  go.sum  main.go
08_promtheus_grafana/: .ait.toml  .gitignore  prometheus.yml
09_circuit_breakers/: .gitignore  README.md  go.mod  main.go
10_cache_locking/: README.md  docker-compose.yml  go.mod  go.sum  main.go
11_data_warehouse/: README.md
12_rate_limiter/: README.md  go.mod  main.go
13_protobuf/: README.md  docker-compose.yml  go.mod  go.sum  main.go
14_grpc/: .air.toml  Dockerfile  README.md  docker-compose.yml  go.mod
15_memcache/: .gitignore  README.md  atomic_method.go  docker-compose.yml  go.mod  main.go  retrieval_method.go  storage_method.go
16_realtime_abuse_master/: .air.toml  README.md  (+5 more)
33_clickhouse/clickhouse/: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yaml  init.sql
33_clickhouse/clickhouse/src/: lib.rs  main.rs
33_clickhouse/clickhouse/src/config/: mod.rs
33_clickhouse/clickhouse/src/controllers/: clickhouse_controller.rs  mod.rs
33_clickhouse/clickhouse/src/errors/: mod.rs
33_clickhouse/clickhouse/src/models/: mod.rs
33_clickhouse/clickhouse/src/repositories/: clickhouse.rs
33_clickhouse/clickhouse/src/routes/: clickhouse_route.rs  mod.rs
33_clickhouse/clickhouse/src/services/: clickhouse.rs
33_clickhouse/clickhouse/src/state/: app_state.rs
(+232 files in other folders)
