[package]
name = "clickhouse"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "load_test"
path = "src/bin/load_test.rs"

[dependencies]
# Web framework
axum            = { version = "0.7", features = ["macros"] }
tokio           = { version = "1", features = ["full"] }
tower           = { version = "0.4" }
tower-http      = { version = "0.5", features = ["trace", "cors"] }

# ClickHouse — official client, uses native HTTP protocol
clickhouse      = { version = "0.12", features = ["inserter"] }

# Serialization
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"

# Time
chrono          = { version = "0.4", features = ["serde"] }

# Logging / tracing
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config from env
dotenvy         = "0.15"

# Errors
thiserror       = "1"
anyhow          = "1"
async-trait = "0.1.89"
openssl = "0.10.77"

[dev-dependencies]
# HTTP client used by load tester
reqwest         = { version = "0.12", features = ["json"] }

# Load tester also needs these
[target.'cfg(not(test))'.dependencies]
reqwest         = { version = "0.12", features = ["json"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
